--- a/package.json
+++ b/package.json
@@ -18,16 +18,19 @@
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^5.1.3",
     "css-loader": "^6.4.0",
-    "react-bootstrap": "^2.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
     "style-loader": "^3.3.0",
     "webpack": "^5.56.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.3.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "webpack-dev-server": "^4.3.0"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.2"
   }
 }
